# EDA2

./: CMakeLists.txt  README.md  UserList.txt  estructures_i_funcions.c  estructures_i_funcions.h  funcions_diccionari.c  funcions_publicacions.c  funcions_solicituds.c  funcions_usuaris.c  main.c
headers/: file_reader.h  globals.h  menu.h  printer.h  user.h
implementations/: file_reader.c  printer.c  user.c
